--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# The Art of Prompt Engineering
+# The Art of Prompt Engineering #
 The Art of Prompt Engineering
 IBMSkillsNetwork - GPXX0TGVEN
 Started - Feb 27, 2024
